iptables_setup/iptables
# Generated by iptables-save v1.4.21 on Mon Apr 13 18:10:02 2020
*mangle
:PREROUTING ACCEPT [113086:6941454]
:INPUT ACCEPT [96263:5935240]
:FORWARD ACCEPT [16823:1006214]
:OUTPUT ACCEPT [81448:5101485]
:POSTROUTING ACCEPT [98271:6107699]
COMMIT
# Completed on Mon Apr 13 18:10:02 2020
# Generated by iptables-save v1.4.21 on Mon Apr 13 18:10:02 2020
*nat
:PREROUTING ACCEPT [70388:3629957]
:INPUT ACCEPT [70388:3629957]
:OUTPUT ACCEPT [9511:722822]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5555 -j DNAT --to-destination 45.76.144.199:5555
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 183.90.168.88:8001
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8002 -j DNAT --to-destination 183.90.168.88:8002
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8003 -j DNAT --to-destination 183.90.168.88:8003
-A PREROUTING -i eth0 -p tcp -m tcp --dport 9004 -j DNAT --to-destination 183.90.168.88:9004
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8011 -j DNAT --to-destination 183.90.168.88:8011
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8012 -j DNAT --to-destination 183.90.168.88:8012
-A PREROUTING -i eth0 -p tcp -m tcp --dport 8013 -j DNAT --to-destination 183.90.168.88:8013
-A PREROUTING -i eth0 -p tcp -m tcp --dport 9014 -j DNAT --to-destination 183.90.168.88:9014
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Apr 13 18:10:02 2020
# Generated by iptables-save v1.4.21 on Mon Apr 13 18:10:02 2020
*filter
:INPUT ACCEPT [96264:5935292]
:FORWARD ACCEPT [16823:1006214]
:OUTPUT ACCEPT [81448:5101485]
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -o eth0 -j ACCEPT
COMMIT
# Completed on Mon Apr 13 18:10:02 2020
